--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fiscal_validator
-description: "A new Flutter project."
+description: "Validador de XML da Lunar Software"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -38,10 +38,34 @@ dependencies:
   file_picker: ^6.1.1
   xml: ^6.5.0
   currency_text_input_formatter: ^2.1.13
+  intl: ^0.19.0
+  mask_text_input_formatter: ^2.9.0
+  rename_app: ^1.6.1
+  get: ^4.6.6
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo_icon_launcher.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/logo_icon_launcher.png"
+    background_color: "#hexcode"
+    theme_color: "#ffffff"
+  windows:
+    generate: true
+    image_path: "assets/logo_icon_launcher.png"
+    icon_size: 256 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/logo_icon_launcher.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
