--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   rename_app: ^1.6.1
   get: ^4.6.6
+  flutter_expandable_table: ^2.1.0
   
 
 dev_dependencies:
